<resources>
    <string name="app_name">MeChat</string>
    <string name="app_display_name">MeChat</string>
    <string name="nav_display_wechat">WeChat</string>
    <string name="nav_display_contacts">Contacts</string>
    <string name="nav_display_discover">Discover</string>
    <string name="nav_display_me">Me</string>
    <string name="test_lv_tv_uname">麻花藤</string>
    <string name="test_lv_tv_digest">充钱吧少年，用心创造快乐，没钱玩你**</string>
    <string name="wechat_search">Search</string>
    <string name="wechat_group_chat">Group Chat</string>
    <string name="wechat_add_contacts">Add Contacts</string>
    <string name="wechat_scan_qr">Scan QR Code</string>
    <string name="wechat_money">Money</string>
    <string name="wechat_help">Help &#038; Feedback</string>
</resources>
