<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/wechat_search"
        android:icon="@mipmap/search"
        android:title="@string/wechat_search"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/wechat_group_chat"
        android:icon="@mipmap/groupchat"
        android:title="@string/wechat_group_chat"
        />

    <item
        android:id="@+id/wechat_add_contacts"
        android:icon="@mipmap/addcontacts"
        android:title="@string/wechat_add_contacts"
        />
    <item
        android:id="@+id/wechat_scan"
        android:icon="@mipmap/scan"
        android:title="@string/wechat_scan_qr"
        />
    <item
        android:id="@+id/wechat_money"
        android:icon="@mipmap/money"
        android:title="@string/wechat_money"
        />
    <item
        android:id="@+id/wechat_help"
        android:icon="@mipmap/help"
        android:title="@string/wechat_help"
        />

</menu>